changed input type

--- a/index.html
+++ b/index.html
@@ -24,12 +24,10 @@
 
 
     <form id="bookStatsForm" method="get">
-  <label for="startTime">Start Time:</label><br>
-  <input class="mb-3" type="time" id="startTime" name="startTime"><br>
  <label for="startPage">Start Page:</label><br>
  <input class="mb-3" type="number" id="startPage" name="startPage"><br> 
- <label for="endTime">End Time:</label><br>
-  <input class="mb-3" type="time" id="endTime" name="endTime"><br>
+ <label for="endTime">Minutes Read:</label><br>
+  <input class="mb-3" type="number" id="endTime" name="endTime"><br>
  <label for="endPage">End Page:</label><br>
  <input class="mb-3" type="number" id="endPage" name="endPage"><br>
  <label for="totalPages">Total Pages in Book:</label><br>
