--- a/rttracking.html
+++ b/rttracking.html
@@ -39,16 +39,22 @@
         <input class="mb-3" type="number" id="startPage" name="startPage"><br> 
         <label for="totalPages">Total Pages in Book:</label><br>
         <input class="mb-3" type="number" id="totalPages" name="totalPages"><br>
+        <label for="pagesTickNum">Pages Per Press (ex: 2 for turning the page on a paper book):</label><br>
+        <input class="mb-3" type="number" id="pagesTickNum" name="pagesTickNum"><br>
        </form>
-       <p><strong>How it Works:</strong><br> Simply press the Start button, keep your computer or smartphone awake with the webpage open, <em>(It may be helpful to change your device settings to not fall asleep)</em> <em>also the webpage must be the current focus,</em> and for every page turn press the spacebar on your keyboard or tap anywhere on the webpage.</p>
+       <p><strong>How it Works:</strong><br> Simply press the Start button, keep your computer or smartphone awake with the webpage open, <em>(It may be helpful to change your device settings to not fall asleep)</em> <em>also the webpage must be the current focus,</em> and for every page turn press the spacebar on your keyboard or tap the tap zone below.</p>
 
         <button type="button" class="btn btn-secondary btn-lg" onclick="startTracking()">Start</button>
 
         <br>
         <br>
         <br>
-        <p class="lead" id="output"></p>
+        <p class="lead" id="output"><br><br><br></p>
 
+        <div id="tapZone" hidden="true" class="bg-secondary"><p>----------<br>----------<br>----------<br>TAP<br>HERE<br>----------<br>----------<br>----------</p></div>
+       <br><br>
+       <button type="button" class="btn btn-secondary btn-lg" onclick="reloadPage()">Restart</button>
+       <p>Press restart button if you need to change the values in the form.</p>
        <script src="rtscript.js"></script>
        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
