added save data cookie

--- a/index.html
+++ b/index.html
@@ -33,8 +33,10 @@
   </div>
 </fieldset>
 
-
+  <p><em>To save data for next time input a book title.</em></p>
     <form id="bookStatsForm" method="get">
+  <label for="bookTitle">Book Title:</label><br>
+ <input class="mb-3" type="text" id="bookTitle" name="bookTitle"><br> 
  <label for="startPage">Start Page:</label><br>
  <input class="mb-3" type="number" id="startPage" name="startPage"><br> 
  <label for="endTime">Minutes Read:</label><br>
