--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Book Stats Calculator</title>
+    <link rel="stylesheet" href="style.css">
      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body class="container-fluid text-center col">
@@ -32,8 +33,10 @@
     <label for="goal">Goal Calc</label>
   </div>
 </fieldset>
-
-  <p><em>To save data for next time input a book title.</em></p>
+  <div id="saveSlotsContainer" class="saveSlotsContainer">
+    <button class="btn btn-secondary mb-3" onclick="showSaveSlots()">Save Slots</button>
+  </div>
+  <p><em>To save data for next time input a book title. (Overwrites Current Slot)</em></p>
     <form id="bookStatsForm" method="get">
   <label for="bookTitle">Book Title:</label><br>
  <input class="mb-3" type="text" id="bookTitle" name="bookTitle"><br> 
@@ -50,7 +53,8 @@
 
 <p class="lead" id="output"></p>
 
-
+<br><br><br>
+<footer><em>Clearing cookies will remove site data.</em></footer>
 <script type="text/javascript" src="script.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
